# CodeReviewAI

./: .gitignore  Dockerfile  Makefile  README.md  default.env  docker-compose.yml  pyproject.toml
src/app/: server.py
src/app/core/: config.py  dependencies.py  logger.py
src/clients/: github.py  openai.py  redis.py
src/routes/: __init__.py  health.py  review.py
src/schemas/: review.py
src/tests/: conftest.py  test_clients.py  test_dependencies.py  test_github.py  test_openai.py  test_redis.py
